# ai-slop

./: .gitignore  CLAUDE.md  README.md
AudioMerge/: Cargo.toml  README.md
AudioMerge/conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
AudioMerge/src/: args.rs  dry_run.rs  main.rs  merger.rs  scanner.rs
BookmarkCleaner/: Cargo.toml  README.md
BookmarkCleaner/src/: app.rs  main.rs  parser.rs  scanner.rs  ui.rs
ThoughtQueue/: README.md  project.yml
ThoughtQueue/txtmem/: AppDelegate.swift
ThoughtQueue/txtmem.xcodeproj/: project.pbxproj
ThoughtQueue/txtmemTests/: DatabaseManagerTests.swift
_bmad-output/brainstorming/: brainstorming-session-2026-02-27.md  brainstorming-session-2026-04-04.md
_bmad-output/implementation-artifacts/: 1-1-xcode-project-initialization-and-core-utilities.md  1-2-menu-bar-icon-and-tray-popup-shell.md  1-3-main-window-and-app-lifecycle.md  2-1-rclone-discovery-and-app-settings.md  2-2-profile-data-model-and-persistence.md  2-3-remote-discovery-and-profile-creation-form.md  2-4-paste-to-create-profile.md  2-5-profile-edit-delete-and-dry-run.md  (+8 more)
aetr/: .gitignore  PLAN.md  README.md  build.sh
ai-hardware-eval/: CLAUDE.md  Cargo.toml  README.md  build.sh
ai-hardware-eval/src/: analysis.rs  hardware.rs  main.rs  models.rs  ollama.rs
claude-usage/: Cargo.toml  README.md
claude-usage/src/: cookies.rs  crypto.rs  error.rs  keychain.rs  main.rs
claude-usage/tests/: cli.rs
obd2-writer/: .PLAN.md.swp  .gitignore  CLAUDE.md  Cargo.toml  NOTES.md  PLAN.md  README.md  findings-2026-04-03.md  obd2_backups.json  raw-output.txt  seatbelt-chime-notes.md  toyota_dids.toml
obd2-writer/src/: browse.rs  cli.rs  error.rs  main.rs  shell.rs
obd2-writer/src/obd/: dtc.rs  mod.rs  pid.rs
obd2-writer/src/protocol/: isotp.rs  uds.rs
obd2-writer/src/toyota/: backup.rs  bcm.rs  did_scan.rs  ecu_scan.rs  enhanced_pids.rs  mod.rs  tpms.rs  write_safety.rs
obd2-writer/src/transport/: elm327.rs  mod.rs  serial.rs
obd2-writer/src/tui/: app.rs  elm_actor.rs  event.rs  mod.rs
obd2-writer/src/tui/screens/: backup.rs  dashboard.rs  dtc.rs  mod.rs  raw.rs  scans.rs  settings.rs
obd2-writer/src/tui/widgets/: confirm.rs  gauge.rs  mod.rs  pid_picker.rs  status_bar.rs
orcha-ai/: .gitignore  README.md  package-lock.json  package.json
osx-anytone/: .gitignore  PLAN.md  README.md  build-rust.sh  build.sh  project.yml
spell-i/: CLAUDE.md  README.md  build-rust.sh  build.sh  default.profraw  project.yml
stash-mgr/: Cargo.toml  README.md
txtmem/: CLAUDE.md  README.md  build.sh  project.yml
(+251 files in other folders)
