[package]
name = "bookmark-cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Winter Faulk <winter@faulk.me>"]
description = "A terminal-based bookmark cleaner and updater."
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "trust-dns"], default-features = false }
ratatui = "0.26"
crossterm = "0.27"
scraper = "0.18"
anyhow = "1.0"
url = "2.5"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
