[package]
name = "ai-hardware-eval"
version = "0.1.0"
edition = "2021"
description = "Evaluate hardware for local AI model inference and recommend Ollama models"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
colored = "2"
clap = { version = "4", features = ["derive"] }
