[package]
name = "claude-usage"
version = "0.2.0"
edition = "2021"
description = "Fetch Claude Code usage data via OAuth"

[dependencies]
security-framework = "3"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
